--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,7 @@
 @import 'globals/mixins';
 
 //Vendor stylesheets
-@import url('vendor/font-awesome.min.css');
+@import 'vendor/font-awesome.min.css';
 
 //Site globals
 @import 'globals/layout';
