--- a/src/app/components/masterpage/header/header.component.html
+++ b/src/app/components/masterpage/header/header.component.html
@@ -1,15 +1,26 @@
 <header>
-    <div class="container-fluid header-main">
-        <div class="row">
-            <div class="col-xs-12 col-md-8">
-                <h1><a title="Consumer Portal Home" [routerLink]="['/']" routerLinkActive="active"><img src="assets/img/ld-logo.png"> <span>Sunrise</span></a> </h1>
-            </div>
-            <div class="col-xs-12 col-md-4 hidden-sm-down">
-                <div class="header-user pull-right">
-                    <span></span>
-                    <i class="fa fa-user-circle" aria-hidden="true"></i> {{User.UserName}}
+    <div class="header-main">
+        <div class="container">
+            <nav-main></nav-main>
+            <!--
+            <div class="container-fluid header-main">
+                <div class="row">
+                    <div class="col-xs-12 col-md-3">
+                        <h1><a title="Consumer Portal Home" [routerLink]="['/']" routerLinkActive="active"><img src="assets/img/ld-logo.png"> <span>Sunrise</span></a> </h1>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <nav-main></nav-main>
+                    </div>
+                    <div class="col-xs-12 col-md-3 hidden-sm-down">
+                        <div class="header-user pull-right">
+                            <span></span>
+                            <i class="fa fa-user-circle" aria-hidden="true"></i> {{User.UserName}}
+                        </div>
+                    </div>
                 </div>
+
             </div>
+                -->
         </div>
     </div>
 </header>
