Added service with cached observables

--- a/src/app/components/masterpage/nav-main/nav-main.component.html
+++ b/src/app/components/masterpage/nav-main/nav-main.component.html
@@ -7,7 +7,7 @@
     
 
     <a title="Home" class="navbar-brand" [routerLink]="['/']" routerLinkActive="active">
-        <img src="assets/img/ld-logo.png"> <span>LD Seed</span>
+        <img src="assets/img/ld-logo.png"> LD Seed
     </a>
 
     <!--
@@ -26,10 +26,4 @@
     </div>
         -->
 
-    <!--
-    <span class="header-user pull-right">
-        <span></span>
-        <i class="fa fa-user-circle" aria-hidden="true"></i> {{User.UserName}}
-    </span>
-     -->
 </nav>
