Added additional scaffolding

--- a/src/app/components/masterpage/header/header.component.html
+++ b/src/app/components/masterpage/header/header.component.html
@@ -4,7 +4,7 @@
             <nav-main class="pull-left"></nav-main>
             <span class="header-user pull-right">
                 <span></span>
-                <i class="fa fa-user-circle" aria-hidden="true"></i> {{user.UserName}}
+                <i class="fa fa-user-circle" aria-hidden="true"></i> 
             </span>
         </div>
     </div>
